[package]
name = "rouille"
version = "3.0.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tomaka/rouille"
documentation = "http://docs.rs/rouille"
description = "High-level idiomatic web framework."
readme = "README.md"
keywords = ["web", "framework", "http", "rest"]
categories = ["web-programming::http-server", "web-programming::websocket"]

[features]
default = ["gzip", "brotli"]
brotli = ["brotli2"]
gzip = ["deflate"]
ssl = ["tiny_http/ssl"]

[dependencies]
base64 = "0.10"
brotli2 = { version = "0.3.2", optional = true }
chrono = "0.4.0"
filetime = "0.2.0"
deflate = { version = "0.7", optional = true, features = ["gzip"] }
multipart = { version = "0.16", default-features = false, features = ["server"] }
percent-encoding = "2"
rand = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha1 = "0.6.0"
time = "0.1.31"
tiny_http = "0.6.0"
url = "2"
threadpool = "1"
num_cpus = "1"

[dev-dependencies]
postgres = { version = "0.15.2", default-features = false }
log = "0.4"
