[package]
name = "rouille"
version = "3.5.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tomaka/rouille"
documentation = "http://docs.rs/rouille"
description = "High-level idiomatic web framework."
readme = "README.md"
keywords = ["web", "framework", "http", "rest"]
categories = ["web-programming::http-server", "web-programming::websocket"]

[features]
default = ["gzip", "brotli", "logging", "assets", "post", "session"]
gzip = ["deflate"]
ssl = ["tiny_http/ssl"]
rustls = ["tiny_http/ssl-rustls"]
logging = ["chrono"]
assets = ["filetime", "time"]
post = ["multipart"]
session = ["rand"]

[dependencies]
base64 = "0.13"
brotli = { version = "3.3.2", optional = true }
chrono = { version = "0.4.19", optional = true, default-features = false, features = ["clock"] }
filetime = { version = "0.2.0", optional = true }
deflate = { version = "1.0.0", optional = true, features = ["gzip"] }
multipart = { version = "0.18", optional = true, default-features = false, features = ["server"] }
percent-encoding = "2"
rand = { version = "0.8", optional = true }
serde = "1"
serde_derive = "1"
serde_json = "1"
sha1 = "0.10.1"
time = { version = "0.3.15", optional = true, features = [ "local-offset" ] }
tiny_http = { version = "0.12.0", default-features = false }
url = "2"
threadpool = "1"
num_cpus = "1"

[dev-dependencies]
postgres = { version = "0.19", default-features = false }
log = "0.4"
