[package]
name = "rouille-multipart"
version = "0.19.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]
description = "A backend-agnostic extension for HTTP libraries that provides support for POST multipart/form-data requests on both client and server."
keywords = ["form-data", "http", "upload"]
repository = "http://github.com/abonander/multipart"
documentation = "http://docs.rs/multipart/"
license = "MIT OR Apache-2.0"
readme = "README.md"
autobins = false
edition = "2021"

[dependencies]
log = "0.4"
mime = "0.3.14"
mime_guess = "2.0.1"
rand = "0.9"
tempfile = "3"

#Server Dependencies
buffer-redux = { version = "1.0", optional = true, default-features = false }
httparse = { version = "1.2", optional = true }
thiserror = { version = "2.0.12", optional = true }
memchr = { version = "2.7.5", optional = true }

# Optional Integrations
tiny_http = { version = "0.12", optional = true }

[dev-dependencies]
env_logger = "0.11"

[features]
client = []
default = ["client", "mock", "server", "tiny_http"]
server = ["buffer-redux", "httparse", "dep:memchr", "dep:thiserror"]
mock = []
