[package]
name = "multipart-nickel"
version = "0.3.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "Support for `multipart/form-data` bodies in Nickel via the `multipart` crate."
documentation = "https://docs.rs/multipart-nickel"
repository = "https://github.com/abonander/multipart"
license = "MIT OR Apache-2.0"

[dependencies]
hyper = "0.9"
nickel = "0.9"

[dependencies.multipart]
version = "0.12"
# I had no idea you could also specify a path
path = "../"
default-features = false
features = ["hyper", "server"]
