[package]
name = "multipart-nickel"
version = "0.3.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "Support for `multipart/form-data` bodies in Nickel via the `multipart` crate."
documentation = "https://docs.rs/multipart-nickel"
repository = "https://github.com/abonander/multipart"
license = "MIT OR Apache-2.0"

[dependencies]
hyper = "0.10"
nickel = "0.10"

[dependencies.multipart]
version = "0.13"
# You can specify a path alongside the version so it can be tested against the latest code but published
# against the released version
path = "../"
default-features = false
features = ["hyper", "server"]
